# fast-radial-solvers

./: .gitignore  CMakeLists.txt
cmake/: FindOctave.cmake
fullsolvers/: data_from_lin_kEf_cc.cpp  data_from_lin_kfE_cc.cpp  data_from_lin_kfEf_cc.cpp
